--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -14,7 +14,7 @@
   talk: Jean-François Biasse
 
 - time: 3–4pm
-  talk: Johan Nielsen
+  talk: Johan S. R. Nielsen
 
 - time: 4–4:30pm
   desc: Coffee break
